--- a/GetItFreshApi/appsettings.json
+++ b/GetItFreshApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AppConnection": "Data Source=DESKTOP-OV69T89\\SQLEXPRESS;Initial Catalog=GET-IT-FRESH;Integrated Security=True; Trust Server Certificate=true"
+  },
   "AllowedHosts": "*"
 }
