--- a/GetItFreshApi/GetItFreshApi.csproj
+++ b/GetItFreshApi/GetItFreshApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
     <PackageReference Include="JetBrains.ReSharper.CommandLineTools" Version="2023.2.2">
       <PrivateAssets>all</PrivateAssets>
