--- a/GetItFreshApi/GetItFreshApi.csproj
+++ b/GetItFreshApi/GetItFreshApi.csproj
@@ -26,8 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Log\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
