added get by id endpoint

--- a/GetItFreshApi/appsettings.Development.json
+++ b/GetItFreshApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AppConnection": "Data Source=DESKTOP-OV69T89\\SQLEXPRESS;Initial Catalog=GET-IT-FRESH;Integrated Security=True; Trust Server Certificate=true"
   }
 }
